--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
           node-version: '16'
 
       - name: Say Hello
-        run: echo "Hello from Jailakshmi7683"
+        run: echo "Hello from @Jailakshmi7683"
